<resources>
    <string name="app_name">Rutkowski001</string>
    <string name="camera">Camera</string>
    <string name="albums">Albums</string>
    <string name="collage">Collage</string>
    <string name="network">Network</string>
    <string name="newAlbums">Albums new</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="desc">Description</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>