<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:layout_width="@dimen/chevron"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_chevron_left_white_48"
            android:layout_alignParentStart="true"
            tools:ignore="ContentDescription">
        </ImageView>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">
        </ProgressBar>

        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="@dimen/chevron"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_chevron_right_white_48"
            tools:ignore="ContentDescription">
        </ImageView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/camera"
            tools:ignore="NestedWeights,UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/icon_image"
                android:layout_height="@dimen/icon_image"
                android:src="@drawable/baseline_photo_camera_white_48"></ImageView>

            <TextView
                android:layout_width="@dimen/icon_image"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textSize="@dimen/text_medium"
                android:textAlignment="center">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/albums"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/icon_image"
                android:layout_height="@dimen/icon_image"
                android:src="@drawable/baseline_photo_library_white_48">
            </ImageView>
            <TextView
                android:layout_width="@dimen/icon_image"
                android:layout_height="wrap_content"
                android:text="@string/albums"
                android:textSize="@dimen/text_medium"
                android:textAlignment="center">

            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/collage"
            tools:ignore="NestedWeights">
            <ImageView
                android:layout_width="@dimen/icon_image"
                android:layout_height="@dimen/icon_image"
                android:src="@drawable/baseline_space_dashboard_white_48">
            </ImageView>
            <TextView
                android:layout_width="@dimen/icon_image"
                android:layout_height="wrap_content"
                android:text="@string/collage"
                android:textSize="@dimen/text_medium"
                android:textAlignment="center">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/network"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/icon_image"
                android:layout_height="@dimen/icon_image"
                android:src="@drawable/baseline_account_circle_white_48">
            </ImageView>
            <TextView
                android:layout_width="@dimen/icon_image"
                android:layout_height="wrap_content"
                android:text="@string/network"
                android:textSize="@dimen/text_medium"
                android:textAlignment="center">

            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/notes">
            <ImageView
                android:layout_width="@dimen/icon_image"
                android:layout_height="@dimen/icon_image"
                android:src="@drawable/baseline_edit_white_48">
            </ImageView>
            <TextView
                android:layout_width="@dimen/icon_image"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textSize="@dimen/text_medium"
                android:textAlignment="center">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/newAlbums">
            <ImageView
                android:layout_width="@dimen/icon_image"
                android:layout_height="@dimen/icon_image"
                android:src="@drawable/baseline_photo_library_white_48">
            </ImageView>
            <TextView
                android:layout_width="@dimen/icon_image"
                android:layout_height="wrap_content"
                android:text="@string/newAlbums"
                android:textSize="@dimen/text_medium"
                android:textAlignment="center">

            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>